objects/New_Car_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Transmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Transmission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunroof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunroof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minivan</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Coupe</fullName>
                </value>
                <value>
                    <fullName>Wagon</fullName>
                </value>
                <value>
                    <fullName>Sedan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4_Wheel_Drive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Wheel Drive</label>
        <type>Checkbox</type>
    </fields>
    <label>New_Car_Survey</label>
    <nameField>
        <label>New_Car_Survey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New_Car_Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>